# opensource_langchain

./: 1.Chat_with_PDF.ipynb  2.Agent.ipynb  README.md  pyproject.toml
langchain_pipeline/: huggingface_model.py
